@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.462 2007/01/23 15:08:45 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.463 2007/01/25 15:51:28 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -53,6 +53,12 @@ PH/07 There was a bug in the dovecot authenticator such that the value of
 PH/08 Added $smtp_count_at_connection_start, deliberately with a long name.
 
 PH/09 Installed PCRE release 7.0.
+
+PH/10 The acl_not_smtp_start ACL was, contrary to the documentation, not being
+      run for batched SMTP input. It is now run at the start of every message
+      in the batch. While fixing this I discovered that the process information
+      (output by running exiwhat) was not always getting set for -bs and -bS
+      input. This is fixed, and it now also says "batched" for BSMTP.
 
 
 Exim version 4.66
